{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 449,
  "lineage": "bdece15f-6224-0b4b-eec1-e7227e5f6df3",
  "resources": [
    {
      "module": "module.branch01",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "res-24",
      "provider": "module.branch01.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/networkInterfaces/vmjlabbr01srv139",
            "internal_domain_name_suffix": "4jxknx3hzfyejbiyn1gieemuef.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/publicIPAddresses/vmjlabbr01srv-ip",
                "subnet_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/Compute"
              }
            ],
            "location": "centralus",
            "name": "vmjlabbr01srv139",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "rg-jlab-branch01"
          },
          "dependencies": [
            "module.branch01.azurerm_public_ip.res-29",
            "module.branch01.azurerm_virtual_network.res-33"
          ]
        }
      ]
    },
    {
      "module": "module.branch01",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-25",
      "provider": "module.branch01.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/networkSecurityGroups/vnet-jlab-branch01-Compute-nsg-centralus",
            "location": "centralus",
            "name": "vnet-jlab-branch01-Compute-nsg-centralus",
            "resource_group_name": "rg-jlab-branch01",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.branch01.azurerm_resource_group.res-1"
          ]
        }
      ]
    },
    {
      "module": "module.branch01",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-29",
      "provider": "module.branch01.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/publicIPAddresses/vmjlabbr01srv-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.89.25.167",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "vmjlabbr01srv-ip",
            "resource_group_name": "rg-jlab-branch01",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.branch01.azurerm_resource_group.res-1"
          ]
        }
      ]
    },
    {
      "module": "module.branch01",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-30",
      "provider": "module.branch01.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/publicIPAddresses/vngw-jlab-branch01-pip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.89.25.16",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "vngw-jlab-branch01-pip1",
            "resource_group_name": "rg-jlab-branch01",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.branch01.azurerm_resource_group.res-1"
          ]
        }
      ]
    },
    {
      "module": "module.branch01",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-31",
      "provider": "module.branch01.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/publicIPAddresses/vngw-jlab-branch01-pip2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.89.25.21",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "vngw-jlab-branch01-pip2",
            "resource_group_name": "rg-jlab-branch01",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.branch01.azurerm_resource_group.res-1"
          ]
        }
      ]
    },
    {
      "module": "module.branch01",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-34",
      "provider": "module.branch01.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/Compute",
            "name": "Compute",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-jlab-branch01",
            "virtual_network_name": "vnet-jlab-branch01"
          },
          "dependencies": [
            "module.branch01.azurerm_resource_group.res-1",
            "module.branch01.azurerm_virtual_network.res-33"
          ]
        }
      ]
    },
    {
      "module": "module.branch01",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-36",
      "provider": "module.branch01.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.0.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-jlab-branch01",
            "virtual_network_name": "vnet-jlab-branch01"
          },
          "dependencies": [
            "module.branch01.azurerm_resource_group.res-1",
            "module.branch01.azurerm_virtual_network.res-33"
          ]
        }
      ]
    },
    {
      "module": "module.branch01",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "res-35",
      "provider": "module.branch01.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/Compute",
            "network_security_group_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/networkSecurityGroups/vnet-jlab-branch01-Compute-nsg-centralus",
            "subnet_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/Compute"
          },
          "dependencies": [
            "module.branch01.azurerm_network_security_group.res-25",
            "module.branch01.azurerm_resource_group.res-1",
            "module.branch01.azurerm_subnet.res-34",
            "module.branch01.azurerm_virtual_network.res-33"
          ]
        }
      ]
    },
    {
      "module": "module.branch01",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-33",
      "provider": "module.branch01.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "dfa66ef2-c9a7-4470-8518-6ecc82119425",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01",
            "location": "centralus",
            "name": "vnet-jlab-branch01",
            "resource_group_name": "rg-jlab-branch01",
            "subnet": [
              {
                "address_prefix": "192.168.0.0/27",
                "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "192.168.1.0/24",
                "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/Compute",
                "name": "Compute",
                "security_group": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/networkSecurityGroups/vnet-jlab-branch01-Compute-nsg-centralus"
              }
            ]
          },
          "dependencies": [
            "module.branch01.azurerm_resource_group.res-1"
          ]
        }
      ]
    },
    {
      "module": "module.branch01",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "res-32",
      "provider": "module.branch01.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": true,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65533,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "192.168.0.7"
                    ],
                    "ip_configuration_name": "default",
                    "tunnel_ip_addresses": [
                      "13.89.25.16",
                      "192.168.0.4"
                    ]
                  },
                  {
                    "default_addresses": [
                      "192.168.0.6"
                    ],
                    "ip_configuration_name": "activeActive",
                    "tunnel_ip_addresses": [
                      "13.89.25.21",
                      "192.168.0.5"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": true,
            "generation": "Generation1",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworkGateways/vngw-jlab-branch01",
            "ip_configuration": [
              {
                "name": "default",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/publicIPAddresses/vngw-jlab-branch01-pip1",
                "subnet_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/GatewaySubnet"
              },
              {
                "name": "activeActive",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/publicIPAddresses/vngw-jlab-branch01-pip2",
                "subnet_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "centralus",
            "name": "vngw-jlab-branch01",
            "private_ip_address_enabled": true,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "rg-jlab-branch01",
            "sku": "VpnGw1",
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "module.branch01.azurerm_public_ip.res-31",
            "module.branch01.azurerm_resource_group.res-1",
            "module.branch01.azurerm_subnet.res-36",
            "module.branch01.azurerm_virtual_network.res-33"
          ]
        }
      ]
    },
    {
      "module": "module.branch01",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "res-20",
      "provider": "module.branch01.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 45,
            "enable_bgp": true,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/connections/s2s-vwan-hub-scus-primary",
            "local_azure_ip_address_enabled": false,
            "local_network_gateway_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/localNetworkGateways/lngw-vwan-jlab-primary",
            "location": "centralus",
            "name": "s2s-vwan-hub-scus-primary",
            "resource_group_name": "rg-jlab-branch01",
            "routing_weight": 0,
            "shared_key": "SharedKey2024",
            "type": "IPsec",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworkGateways/vngw-jlab-branch01"
          },
          "dependencies": [
            "module.branch01.azurerm_local_network_gateway.res-22",
            "module.branch01.azurerm_public_ip.res-31",
            "module.branch01.azurerm_resource_group.res-1",
            "module.branch01.azurerm_subnet.res-36",
            "module.branch01.azurerm_virtual_network.res-33",
            "module.branch01.azurerm_virtual_network_gateway.res-32",
            "module.vwan.azurerm_resource_group.res-2",
            "module.vwan.azurerm_virtual_hub.res-31",
            "module.vwan.azurerm_virtual_wan.res-43",
            "module.vwan.azurerm_vpn_gateway.res-44"
          ]
        }
      ]
    },
    {
      "module": "module.branch01",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "res-21",
      "provider": "module.branch01.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 45,
            "enable_bgp": true,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/connections/s2s-vwan-hub-scus-secondary",
            "local_azure_ip_address_enabled": false,
            "local_network_gateway_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/localNetworkGateways/lngw-vwan-jlab-secondary",
            "location": "centralus",
            "name": "s2s-vwan-hub-scus-secondary",
            "resource_group_name": "rg-jlab-branch01",
            "routing_weight": 0,
            "shared_key": "SharedKey2024",
            "type": "IPsec",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworkGateways/vngw-jlab-branch01"
          },
          "dependencies": [
            "module.branch01.azurerm_local_network_gateway.res-23",
            "module.branch01.azurerm_public_ip.res-31",
            "module.branch01.azurerm_resource_group.res-1",
            "module.branch01.azurerm_subnet.res-36",
            "module.branch01.azurerm_virtual_network.res-33",
            "module.branch01.azurerm_virtual_network_gateway.res-32",
            "module.vwan.azurerm_resource_group.res-2",
            "module.vwan.azurerm_virtual_hub.res-31",
            "module.vwan.azurerm_virtual_wan.res-43",
            "module.vwan.azurerm_vpn_gateway.res-44"
          ]
        }
      ]
    },
    {
      "module": "module.vwan",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "res-18",
      "provider": "module.vwan.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkInterfaces/vmjlablz1srv01738",
            "internal_domain_name_suffix": "bcxz0ssjqszennbde1p5usquwe.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.22.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/publicIPAddresses/vmjlablz1srv01-pip",
                "subnet_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/Compute"
              }
            ],
            "location": "southcentralus",
            "name": "vmjlablz1srv01738",
            "private_ip_address": "10.22.1.4",
            "private_ip_addresses": [
              "10.22.1.4"
            ],
            "resource_group_name": "rg-jlab-vwan"
          },
          "dependencies": [
            "module.vwan.azurerm_public_ip.res-30",
            "module.vwan.azurerm_subnet.res-38"
          ]
        }
      ]
    },
    {
      "module": "module.vwan",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-22",
      "provider": "module.vwan.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-Compute-nsg-southcentralus",
            "location": "southcentralus",
            "name": "vnet-vwan-jlab-scus-Compute-nsg-southcentralus",
            "resource_group_name": "rg-jlab-vwan",
            "security_rule": [
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAnyRDPInbound",
                "priority": 3000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vwan.azurerm_resource_group.res-2"
          ]
        }
      ]
    },
    {
      "module": "module.vwan",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-27",
      "provider": "module.vwan.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-default-nsg-southcentralus",
            "location": "southcentralus",
            "name": "vnet-vwan-jlab-scus-default-nsg-southcentralus",
            "resource_group_name": "rg-jlab-vwan",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vwan.azurerm_resource_group.res-2"
          ]
        }
      ]
    },
    {
      "module": "module.vwan",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-25",
      "provider": "module.vwan.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-Compute-nsg-southcentralus/securityRules/DenyAnyRDPInbound",
            "name": "DenyAnyRDPInbound",
            "network_security_group_name": "vnet-vwan-jlab-scus-Compute-nsg-southcentralus",
            "priority": 3000,
            "protocol": "Tcp",
            "resource_group_name": "rg-jlab-vwan",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vwan.azurerm_network_security_group.res-22",
            "module.vwan.azurerm_resource_group.res-2"
          ]
        }
      ]
    },
    {
      "module": "module.vwan",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-30",
      "provider": "module.vwan.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/publicIPAddresses/vmjlablz1srv01-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.65.79.136",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "vmjlablz1srv01-pip",
            "resource_group_name": "rg-jlab-vwan",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.vwan.azurerm_resource_group.res-2"
          ]
        }
      ]
    },
    {
      "module": "module.vwan",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-38",
      "provider": "module.vwan.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.22.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/Compute",
            "name": "Compute",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-jlab-vwan",
            "virtual_network_name": "vnet-vwan-jlab-scus"
          },
          "dependencies": [
            "module.vwan.azurerm_resource_group.res-2",
            "module.vwan.azurerm_virtual_network.res-37"
          ]
        }
      ]
    },
    {
      "module": "module.vwan",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-40",
      "provider": "module.vwan.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.22.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/default",
            "name": "default",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-jlab-vwan",
            "virtual_network_name": "vnet-vwan-jlab-scus"
          },
          "dependencies": [
            "module.vwan.azurerm_resource_group.res-2",
            "module.vwan.azurerm_virtual_network.res-37"
          ]
        }
      ]
    },
    {
      "module": "module.vwan",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "res-39",
      "provider": "module.vwan.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/Compute",
            "network_security_group_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-Compute-nsg-southcentralus",
            "subnet_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/Compute"
          },
          "dependencies": [
            "module.vwan.azurerm_network_security_group.res-22",
            "module.vwan.azurerm_resource_group.res-2",
            "module.vwan.azurerm_subnet.res-38",
            "module.vwan.azurerm_virtual_network.res-37"
          ]
        }
      ]
    },
    {
      "module": "module.vwan",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "res-41",
      "provider": "module.vwan.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/default",
            "network_security_group_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-default-nsg-southcentralus",
            "subnet_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/default"
          },
          "dependencies": [
            "module.vwan.azurerm_network_security_group.res-27",
            "module.vwan.azurerm_resource_group.res-2",
            "module.vwan.azurerm_subnet.res-40",
            "module.vwan.azurerm_virtual_network.res-37"
          ]
        }
      ]
    },
    {
      "module": "module.vwan",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-37",
      "provider": "module.vwan.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.22.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4a9daf08-8449-46b2-b423-26dffa4a14b4",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus",
            "location": "southcentralus",
            "name": "vnet-vwan-jlab-scus",
            "resource_group_name": "rg-jlab-vwan",
            "subnet": [
              {
                "address_prefix": "10.22.0.0/24",
                "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/default",
                "name": "default",
                "security_group": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-default-nsg-southcentralus"
              },
              {
                "address_prefix": "10.22.1.0/24",
                "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/virtualNetworks/vnet-vwan-jlab-scus/subnets/Compute",
                "name": "Compute",
                "security_group": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-vwan/providers/Microsoft.Network/networkSecurityGroups/vnet-vwan-jlab-scus-Compute-nsg-southcentralus"
              }
            ]
          },
          "dependencies": [
            "module.vwan.azurerm_resource_group.res-2"
          ]
        }
      ]
    }
  ]
}